@@ -502,9 +502,9 @@ Update JOB_STATE_VERSION
 	pack_time(dump_job_ptr->start_time, buffer);
 	pack_time(dump_job_ptr->end_time, buffer);
 	pack_time(dump_job_ptr->suspend_time, buffer);
-        pack_time(dump_job_ptr->pre_sus_time, buffer);
+	pack_time(dump_job_ptr->pre_sus_time, buffer);
 
-	pack16((uint16_t) dump_job_ptr->job_state, buffer);
+	pack16(dump_job_ptr->job_state, buffer);
 	pack16((uint16_t)dump_job_ptr->next_step_id, buffer);
 	pack16((uint16_t)dump_job_ptr->kill_on_node_fail, buffer);
 	pack16((uint16_t)dump_job_ptr->kill_on_step_done, buffer);
@@ -513,7 +513,17 @@ Update JOB_STATE_VERSION
 	pack16((uint16_t)dump_job_ptr->mail_type, buffer);
 
 	packstr(dump_job_ptr->host, buffer);
-	packstr(dump_job_ptr->nodes, buffer);
+//FIXME: Update in slurm v1.2, pack both
+	if (dump_job_ptr->job_state & JOB_COMPLETING) {
+		if (dump_job_ptr->nodes_completing == NULL) {
+			dump_job_ptr->nodes_completing =
+				bitmap2node_name(
+				dump_job_ptr->node_bitmap);
+		}
+		packstr(dump_job_ptr->nodes_completing, buffer);
+	} else {
+		packstr(dump_job_ptr->nodes, buffer);
+	}
 	packstr(dump_job_ptr->partition, buffer);
 	packstr(dump_job_ptr->name, buffer);
 	packstr(dump_job_ptr->alloc_node, buffer);
@@ -555,7 +565,7 @@ static int _load_job_state(Buf buffer)
 	uint16_t mail_type;
 	char *nodes = NULL, *partition = NULL, *name = NULL;
 	char *alloc_node = NULL, *host = NULL, *account = NULL;
-	char *network = NULL, *mail_user = NULL;
+	char *network = NULL, *mail_user = NULL, *nodes_completing = NULL;
 	struct job_record *job_ptr;
 	struct part_record *part_ptr;
 	int error_code;
@@ -591,6 +601,11 @@ job_ptr->exit_code = exit_code;
 	safe_unpack16(&mail_type, buffer);
 
 	safe_unpackstr_xmalloc(&host, &name_len, buffer);
+#if 0
+//FIXME: Update in slurm v1.2
+	if (job_state & JOB_COMPLETING)
+		safe_unpackstr_xmalloc(&nodes_completing);
+#endif
 	safe_unpackstr_xmalloc(&nodes, &name_len, buffer);
 	safe_unpackstr_xmalloc(&partition, &name_len, buffer);
 	safe_unpackstr_xmalloc(&name, &name_len, buffer);
@@ -673,6 +688,11 @@ job_ptr->exit_code = exit_code;
 	xfree(job_ptr->nodes);
 	job_ptr->nodes  = nodes;
 	nodes           = NULL;	/* reused, nothing left to free */
+	if (nodes_completing) {
+		xfree(job_ptr->nodes_completing);
+		job_ptr->nodes_completing = nodes_completing;
+		nodes_completing = NULL;  /* reused, nothing left to free */
+	}
 	xfree(job_ptr->alloc_node);
 	job_ptr->alloc_node = alloc_node;
 	alloc_node          = NULL;	/* reused, nothing left to free */
@@ -711,6 +731,7 @@ job_ptr->exit_code = exit_code;
 	error("Incomplete job record");
 	xfree(host);
 	xfree(nodes);
+	xfree(nodes_completing);
 	xfree(partition);
 	xfree(name);
 	xfree(alloc_node);
@@ -2599,6 +2620,7 @@ static void _list_delete_job(void *job_entry)
 	delete_job_details(job_ptr);
 	xfree(job_ptr->alloc_node);
 	xfree(job_ptr->nodes);
+	xfree(job_ptr->nodes_completing);
 	FREE_NULL_BITMAP(job_ptr->node_bitmap);
 	xfree(job_ptr->cpus_per_node);
 	xfree(job_ptr->cpu_count_reps);
@@ -2895,8 +2917,15 @@ void reset_job_bitmaps(void)
 		job_ptr->part_ptr = part_ptr;
 
 		FREE_NULL_BITMAP(job_ptr->node_bitmap);
-		if ((job_ptr->nodes) && 
-		    (node_name2bitmap(job_ptr->nodes, false, 
+		if ((job_ptr->nodes_completing)
+		&&  (node_name2bitmap(job_ptr->nodes_completing,
+				      false,  &job_ptr->node_bitmap))) {
+			error("Invalid nodes (%s) for job_id %u",
+			      job_ptr->nodes_completing,
+			      job_ptr->job_id);
+			job_fail = true;
+		} else if ((job_ptr->nodes)
+		&&  (node_name2bitmap(job_ptr->nodes, false,
 				      &job_ptr->node_bitmap))) {
 			error("Invalid nodes (%s) for job_id %u", 
 		    	      job_ptr->nodes, job_ptr->job_id);
@@ -3840,6 +3869,8 @@ extern bool job_epilog_complete(uint32_t job_id, char *node_name,
 #endif
 
 	step_epilog_complete(job_ptr, node_name);
+	/* nodes_completing is out of date, rebuild when next saved */
+	xfree(job_ptr->nodes_completing);
 	if (!(job_ptr->job_state & JOB_COMPLETING))	/* COMPLETED */
 		return true;
 	else
@@ -4260,4 +4291,26 @@ extern int job_end_time(old_job_alloc_msg_t *time_req_msg,
 	timeout_msg->step_id = NO_VAL;
 	timeout_msg->timeout = job_ptr->end_time;
 	return SLURM_SUCCESS;
+}
+
+/* Reset nodes_completing field for all jobs.
+ * Job write lock must be set before calling. */
+extern void update_job_nodes_completing(void)
+{
+	ListIterator job_iterator;
+	struct job_record *job_ptr;
+
+	if (!job_list)
+		return;
+
+	job_iterator = list_iterator_create(job_list);
+	while ((job_ptr = (struct job_record *) list_next(job_iterator))) {
+		if ((job_ptr->job_state & JOB_COMPLETING) == 0)
+			continue;
+		if (job_ptr->nodes_completing)  /* no change */
+			continue;
+		node_name2bitmap(job_ptr->nodes_completing,
+				 false,  &job_ptr->node_bitmap);
+	}
+	list_iterator_destroy(job_iterator);
 }
